src/index.css
::-webkit-scrollbar {
    width: 8px;
}

/* Track */
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey;
    border-radius: 5px;
    overflow: hidden;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #929292;
    border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #464545;
}

* {
    margin: 0;
    padding: 0;
}

ul,
ol {
    list-style: none;
}

.registration .left {
    display: flex;
    justify-content: flex-end;
    margin-right: 100px;
}

.registration .registration-form h2 {
    margin-top: 90px;

    font-family: 'Nunito', sans-serif;
    font-size: 34px;
    font-weight: 700;
    color: #11175D;
}

.registration .registration-form .title {
    margin-top: 12px;

    font-family: 'Nunito', sans-serif;
    font-size: 20px;
    font-weight: 400;
    color: #11175D;
}

.registration .css-1u3bzj6-MuiFormControl-root-MuiTextField-root {
    margin-top: 20px;
    width: 365px;
}

.registration .MuiFormHelperText-root {
    color: #ff0a0a;
}

.registration .signup-btn {
    margin-top: 20px;
    height: 65px;
    width: 365px;
    background: #5F35F5;
    border: none;
    border-radius: 50px;

    font-family: 'Nunito', sans-serif;
    font-size: 20px;
    font-weight: 600;
    color: #fafafa;
}

.registration .redirectlink {
    margin-top: 35px;
    font-family: 'Open Sans', sans-serif;
    font-size: 14px;
    font-weight: 400;
    color: #000;
}

.registration .redirectlink a {
    font-weight: 800;
    color: #EA6C00;
    cursor: pointer;
    text-decoration: none;
}

/* LOGIN-PART */
.login .left {
    display: flex;
    justify-content: flex-end;
    margin-right: 100px;
}

.login .login-form h2 {
    margin-top: 90px;

    font-family: 'Nunito', sans-serif;
    font-size: 34px;
    font-weight: 700;
    color: #11175D;
}

.login .login-form .social-login {
    display: flex;
    margin-top: 30px;

}

.login .login-form .social-login .googleLogin {
    line-height: 62px;
    height: 62px;
    width: 220px;
    border: 1px solid #a5a3a3;
    border-radius: 10px;
    text-align: center;
}

.login .login-form .social-login p {
    line-height: 4.5;
    display: inline-block;
    vertical-align: middle;

    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    font-size: 13px;
    color: #03014C;
}

.login .login-form .social-login img {
    margin-right: 10px;
    margin-bottom: 10px;
}


.login .login-form .social-login .facebookLogin {
    line-height: 62px;
    margin-left: 20px;
    height: 62px;
    width: 220px;
    border: 1px solid #a5a3a3;
    border-radius: 10px;
    text-align: center;
}

.login .css-1u3bzj6-MuiFormControl-root-MuiTextField-root {
    margin-top: 20px;
    width: 365px;
}

.login .MuiFormHelperText-root {
    color: #ff0a0a;
}

.login .eye-icon {
    position: relative;
    top: 35px;
    right: 40px;
}

.login .signin-btn {
    margin-top: 20px;
    height: 65px;
    width: 365px;
    background: #5F35F5;
    border: none;
    border-radius: 10px;

    font-family: 'Nunito', sans-serif;
    font-size: 20px;
    font-weight: 600;
    color: #fafafa;
}

.login .redirectlink {
    margin-top: 35px;
    font-family: 'Open Sans', sans-serif;
    font-size: 14px;
    font-weight: 400;
    color: #000;
}

.login .redirectlink a {
    font-weight: 800;
    color: #EA6C00;
    cursor: pointer;
    text-decoration: none;
}


.menu {
    height: 100vh;
    background: #5F35F5;
    border-radius: 20px;
    margin: 20px;
    text-align: center;
}

.menu .profile-pic {
    height: 100px;
    width: 100px;
    margin-top: 38px;
    border-radius: 50%;
}

.menu .overlay {
    height: 100px;
    width: 100px;
    border-radius: 50%;
    background: rgba(0, 0, 0, 0.5);
    position: absolute;
    margin-left: 30px;
    margin-top: 38px;
    transition: 0.4s;
    opacity: 0;
}

.menu .overlay .upload-image {
    display: none;
    height: 40px;
    width: 40px;
    margin-top: 30px;
    color: aliceblue;
    transition: .4s;
}

.menu .overlay:hover .upload-image {
    display: inline-block;
}

.menu .overlay:hover {
    opacity: 1;
}

.menu .userName {
    color: #fff;
    margin-top: 5px;
}

.menu .icons {
    margin-top: 30px;
}

.menu .icons li {
    margin-top: 5px;
    width: 95%;
    margin-left: auto;
    padding: 20px 0;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    position: relative;
}

.menu .icons .logout {
    margin-top: 15px;
    width: 95%;
    margin-left: auto;
    padding: 20px 0;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    position: relative;
}

.menu .icons li::after {
    position: absolute;
    top: 0;
    right: 0;
    background: #5F35F5;
    width: 10px;
    height: 100%;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    content: "";
}

.menu .icons .active {
    background: #fff;
}

.menu .icons .active .icon {
    color: #5F35F5;
}

.menu .icons li .icon {
    font-size: 45px;
    color: #BAD1FF;
    margin-left: -50px;
}

.modal-style {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 600px;
    background-color: #fff;
    outline: none;
    border-radius: 10px;
    padding: 10px;
    text-align: center;
}

.modal-style .elements {
    padding: 10px;
    text-align: center;
}

.modal-style .elements .profile-pic {
    height: 100px;
    width: 100px;
    margin-top: 38px;
    border-radius: 50%;
}

.modal-style .elements .img-preview {
    margin: 0 auto;
    height: 100px;
    width: 100px;
    margin-top: 38px;
    border-radius: 50%;
    overflow: hidden;
}

.modal-style .elements .input {
    padding: 20px 0;
}

.modal-style .uploadImg {
    margin-top: 10px;
    padding: 5px;
    width: 80%;
    border: none;
    border-radius: 5px;
    background: #5F35F5;
    font-weight: 600;
    color: aliceblue;
    transition: .4s;
}

.modal-style .uploadImg:hover {
    background: #7955fa;
}
/* ... */

